--- a/index.html.html
+++ b/index.html.html
@@ -6,23 +6,17 @@
     <title>Greetings</title>
 
     <style>
-        body{
-            font-variant-caps: all-petite-caps;
-        }
+      body {
+  background: #2b2b2b;   /* رمادي غامق قريب من خلفية Notion */
+}
 
-        .widget {
-            padding: 5px 5px ;
-            color: #000000;
-            display: flex;
-            justify-content:center;
-            align-items:center;
-            flex-direction: column;
-            max-width: 95%;
-            margin: auto;
-            border: 3px solid #000000;
-            border-radius: 5px;
-            box-shadow: 2px 2px 1px 0px #000000;
-        }
+.widget {
+  background: #3a3a3a;   /* صندوق رمادي أفتح قليلاً */
+  color: #f5deb3;        /* لون نص بيج (Wheat) */
+  border: 2px solid #f5deb3;
+  box-shadow: 0 0 10px rgba(245, 222, 179, 0.3);
+}
+
            
         .greet{
             font-size: 3em;
