index.html.html

--- a/index.html.html
+++ b/index.html.html
@@ -11,7 +11,7 @@
 }
 
 .widget {
-  background: #3a3a3a;   /* صندوق رمادي أفتح قليلاً */
+  background: #3a3a3a;   /* صندوق  أفتح قليلاً */
   color: #f5deb3;        /* لون نص بيج (Wheat) */
   border: 2px solid #f5deb3;
   box-shadow: 0 0 10px rgba(245, 222, 179, 0.3);
