--- a/index.html.html
+++ b/index.html.html
@@ -6,16 +6,26 @@
     <title>Greetings</title>
 
     <style>
-      body {
-  background: #2b2b2b;   /* رمادي غامق قريب من خلفية Notion */
+     body {
+    font-variant-caps: all-petite-caps;
+    background: transparent; /* شفافية */
 }
 
 .widget {
-  background: #3a3a3a;   /* صندوق  أفتح قليلاً */
-  color: #f5deb3;        /* لون نص بيج (Wheat) */
-  border: 2px solid #f5deb3;
-  box-shadow: 0 0 10px rgba(245, 222, 179, 0.3);
+    padding: 5px 5px;
+    color: #f5deb3;             /* نص بيج (Wheat) */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 95%;
+    margin: auto;
+    border: 2px solid #f5deb3;  /* إطار بيج */
+    border-radius: 5px;
+    background: transparent;    /* خلفية شفافة */
+    box-shadow: 0 0 10px rgba(245, 222, 179, 0.3); /* ظل ناعم بيج */
 }
+
 
            
         .greet{
